





















2009-06-21  Bruno coudoin  <bruno.coudoin@free.fr>

	- From trunk
	Patch from Miguel that fixes the configuration
	of python activities (tuxpaint and login was crashing).

	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c:
	(py_gc_board_config_window_display),
	(py_gc_board_config_boolean_box), (py_gc_board_config_combo_box),
	(py_gc_board_config_radio_buttons), (py_gc_board_config_spin_int),
	(py_gc_board_conf_separator), (py_gc_board_config_combo_locales),
	(py_gc_board_config_combo_locales_asset),
	(py_gc_board_config_textview):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config_radio.c:
	(gc_board_config_radio_buttons):

2009-06-21  Bruno coudoin  <bruno.coudoin@free.fr>

	- From trunk
	- gnet is now enable by default.

	* configure.in:

2009-06-21  Bruno coudoin  <bruno.coudoin@free.fr>

	- From trunk
	- Patch from Miguel. On some windows manager, we were crashing
	  when opening a configuration windows while in fullscreen.

	* src/gcompris/board_config.c: (gc_board_config_window_display):

2009-02-25  Bruno coudoin  <bruno.coudoin@free.fr>

       - Fixed strings:
       * src/boards/reading.c: (reading_create_item):
       * src/gcompris/board_config_wordlist.c: (gc_board_config_wordlist):

       - Fixed bug, the configuration was crashing uppon startup from the admin mode
       * src/boards/missingletter.c: (_init), (start_board),
       (config_start):
       * src/boards/missingletter_config.c:
       * src/boards/python/admin/board_list.py:

2009-06-20  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk
	- Miquel DE IZARRA Added support for editing the content
	  of the missing letter activity.

	* boards/missing_letter/Makefile.am:
	* boards/missing_letter/board1.xml.in:
	* boards/missing_letter/board2.xml.in:
	* boards/missing_letter/board3.xml.in:
	* boards/missing_letter/board4.xml.in:
	* src/boards/Makefile.am: